test/neg/neg-rpc6.errc
rpc return values may not have type dist_object<T>&, team&, or view<T>
